cluster/prod/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: dnd-forum
spec:
  containers:
  - name: psql
    image: postgres:17
    command: ["sleep", "3600"]
