cluster/prod/dbtester.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dbtester
  namespace: dnd-forum
spec:
  containers:
  - name: dbtester
    image: postgres:17
    command: ["sleep", "3600"]
