cluster/prod/dnd-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnd-app
  namespace: dnd-forum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnd-app
  template:
    metadata:
      labels:
        app: dnd-app
    spec:
      serviceAccountName: dnd-sa
      containers:
        - name: dnd-app
          image: 731945947682.dkr.ecr.us-east-1.amazonaws.com/dnd-forum:latest
          ports:
            - containerPort: 80
          volumeMounts:
            # Mount config.php from Secret into phpBB directory
            - name: phpbb-config
              mountPath: /var/www/html/config.php
              subPath: config.php
            - name: fuse
              mountPath: /dev/fuse
          securityContext: 
            privileged: true
      volumes:
        - name: phpbb-config
          secret:
            secretName: db-secret
        - name: fuse
          hostPath:
            path: /dev/fuse
            type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  name: dnd-app-svc
  namespace: dnd-forum
spec:
  selector:
    app: dnd-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80 # Port exposed in your Dockerfile
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnd-app-ing
  namespace: dnd-forum
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dnd-app-svc
            port:
              number: 80
